--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 <body>
 
 <div class="wrapper">
-    <video class="video flex" width="765" height="430" src="https://www.w3schools.com/html/mov_bbb.mp4"></video>
+<video class="player__video flex" width="765" height="430" src="https://www.w3schools.com/html/mov_bbb.mp4"></video>
     
     <div class="controls">
       <button class="player__button toggle" title="Toggle Play">►</button>
